--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>로그인</title>
-  <link rel="stylesheet" href="../../static/login.css">
+  <link rel="stylesheet" th:href="@{/login.css}" />
 </head>
 <body>
   <div class="login-container">
