회원가입 HTML 페이지 4차  오타 수정

--- a/src/main/resources/templates/pages/user/join.html
+++ b/src/main/resources/templates/pages/user/join.html
@@ -124,7 +124,7 @@
             var nickname = $("#nicknameInput").val();
             var name = $("#nameInput").val();
             var birth = $("#birthInput").val();
-            var countury_code = telParts[0];
+            var country_code = telParts[0];
             var first_hp = telParts[1] ;
             var second_hp = telParts[2];
             var gender = $("input[name='male']:checked").val() || $("input[name='female']:checked").val();
@@ -211,7 +211,7 @@
                 nickname: nickname,
                 name: name,
                 birth: birth,
-                countury_code: telParts[0],
+                country_code: telParts[0],
                 first_hp: telParts[1] ,
                 second_hp: telParts[2],
                 gender: gender,
