회원가입 페이지 로고 오류 수정

--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     .logo_aniplant .link {
-        background-image: url("../static/img/aniplant_logo01.png");
+        background-image: url("/img/aniplant_logo01.png");
         background-repeat: no-repeat;
         background-size: 200px 100px;
         background-position: center;
