--- a/src/main/resources/templates/user/join-complete.html
+++ b/src/main/resources/templates/user/join-complete.html
@@ -10,8 +10,8 @@
       <h1 th:text="'회원가입이 완료되었습니다! ' + ${name} + '님, 환영합니다!'">
         회원가입이 완료되었습니다!
       </h1>
-      <div><a href="login.html">로그인 페이지로 이동</a></div>
-      <div><a href="index.html">홈 페이지로 이동</a></div>
+      <div><a href="user/login.do">로그인 페이지로 이동</a></div>
+      <div><a href="/index.do">홈 페이지로 이동</a></div>
     </div>
   </body>
 </html>
