--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -39,9 +39,9 @@
         <input type="password" id="passwordInput" name="password" placeholder="비밀번호"><span id="passwordError" class="error"></span><br>
         <input type="password" id="passwordConfirmInput" name="password_confirm" placeholder="비밀번호 확인"><span id="passwordConfirmError" class="error"></span><span id="passwordCheckError" class="error"></span><br>
         <input type="email" id="emailInput" name="email" placeholder="[선택] 비밀번호 분실 시 확인용 이메일"><span id="emailError" class="error"></span><br>
-        <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" value maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
-        <input type="text" id="nameInput" name="name" placeholder="이름" value maxlength="8"><span id="nameError" class="error"></span><br>
-        <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" value maxlength="10"><span id="birthError" class="error"></span><br>
+        <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
+        <input type="text" id="nameInput" name="name" placeholder="이름" maxlength="8"><span id="nameError" class="error"></span><br>
+        <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" maxlength="10"><span id="birthError" class="error"></span><br>
         <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><span id="telError" class="error"></span><br>
         <ul class="gender_list">
             <li><input type="radio" id="genderIdentity1" name="gender" value="M"><label for="genderIdentity1">남자</label></li>
@@ -204,7 +204,11 @@
                 $("#genderError").text("");
             }
             
-            var created_at = Math.floor(+ new Date() / 1000); // 현재 날짜와 시간 저장
+            var date = new Date();
+            date.setHours(date.getHours() + 9); // 한국은 UTC로부터 +9시간이므로 9를 더해
+            var timestamp = date.toISOString();
+            var created_at = timestamp
+            
 			var is_admin = "User";
             
             var formData = {
@@ -222,7 +226,7 @@
                 is_admin: is_admin,
             };
 			
-           console.log(formData);
+           // console.log(formData);
             
          	// AJAX post 요청 로직
             $.ajax({
@@ -231,7 +235,7 @@
                 contentType: "application/json",
                 data: JSON.stringify(formData),
                 success: function(response) {
-                    window.location.href = "join-complete.html";
+                    window.location.href = "join-complete.do?name=" + encodeURIComponent(name);
                 },
                 error: function(xhr, status, error) {
                     alert("회원가입 중 오류가 발생했습니다.");
