보안 적용(SpringSecurity 적용, 비밀번호 암호화)

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로그인</title>
+  <title>애니플랜트 : 로그인</title>
   <link rel="stylesheet" th:href="@{/login.css}" />
 </head>
 <body>
@@ -13,7 +13,7 @@
         <input type="text" id="id" name="id" placeholder="아이디를 입력하세요">
  
         <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요">
-
+		
         <button type="submit">로그인</button>
     </form>
 </div>
