--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
+  <title>애니플랜트 : 회원가입</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     .logo_aniplant .link {
@@ -42,7 +42,7 @@
         <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
         <input type="text" id="nameInput" name="name" placeholder="이름" maxlength="8"><span id="nameError" class="error"></span><br>
         <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" maxlength="10"><span id="birthError" class="error"></span><br>
-        <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><span id="telError" class="error"></span><br>
+        <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호"><span id="telError" class="error"></span><br>
         <ul class="gender_list">
             <li><input type="radio" id="genderIdentity1" name="gender" value="M"><label for="genderIdentity1">남자</label></li>
             <li><input type="radio" id="genderIdentity2" name="gender" value="F"><label for="genderIdentity2">여자</label></li>
@@ -113,7 +113,7 @@
     // JS(jQuery)를 사용하여 form 데이터를 AJAX post 요청으로 회원가입 데이터 전송하는 로직
     $(document).ready(function() {
         $("#join_btn").click(function() {
-        	var isValid = true
+        	var isValid = true // 유효성 검사
         	
             // 아이디,닉네임 중복 체크
             if (!isIdChecked) {
@@ -131,6 +131,7 @@
             }
             
             // 전화번호 세 자리로 구분하는 로직
+            var telPattern = /^[0-9]{3}-[0-9]{4}-[0-9]{4}$/;
             var telInput = $("#telInput").val();
             var telParts = telInput.split("-");
 
@@ -213,9 +214,12 @@
             } else {
                 $("#birthError").text("");
             }
-
+			
             if (!telInput) {
                 $("#telError").text("전화번호를 입력해주세요.");
+                isValid = false;
+            } else if (!telPattern.test(telInput)) {
+                $("#telError").text("유효한 전화번호 형식이 아닙니다.");
                 isValid = false;
             } else {
                 $("#telError").text("");
