로그인 로직 완료(SpringSecurty 적용 완료, 오류 해결)

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -35,7 +35,7 @@
   </h1>
   <div class="content">
     <form>
-        <input type="text" id="loginID" name="id" placeholder="아이디"><span id="idError" class="error"></span><br>
+        <input type="text" id="loginID" name="username" placeholder="아이디"><span id="idError" class="error"></span><br>
         <input type="password" id="loginPWD" name="password" placeholder="비밀번호"><span id="pwdError" class="error"></span><br>
         <button type="button" id="login_btn" class="btn_submit">로그인</button><span id="loginError" class="error"></span><br>
     </form>
