--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>애니플랜트 : 회원가입</title>
+  <title>회원가입</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     .logo_aniplant .link {
-        background-image: url("/img/aniplant_logo01.png");
+        background-image: url("../static/img/aniplant_logo01.png");
         background-repeat: no-repeat;
         background-size: 200px 100px;
         background-position: center;
@@ -30,7 +30,7 @@
 </head>
 <body>
     <h1 class="logo_aniplant">
-        <a href="/index.do" class="link"></a>
+        <a href="" class="link"></a>
         <span class="blind">애니플랜트</span>
     </h1>
     <div class="content">
@@ -39,10 +39,10 @@
         <input type="password" id="passwordInput" name="password" placeholder="비밀번호"><span id="passwordError" class="error"></span><br>
         <input type="password" id="passwordConfirmInput" name="password_confirm" placeholder="비밀번호 확인"><span id="passwordConfirmError" class="error"></span><span id="passwordCheckError" class="error"></span><br>
         <input type="email" id="emailInput" name="email" placeholder="[선택] 비밀번호 분실 시 확인용 이메일"><span id="emailError" class="error"></span><br>
-        <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
-        <input type="text" id="nameInput" name="name" placeholder="이름" maxlength="8"><span id="nameError" class="error"></span><br>
-        <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" maxlength="10"><span id="birthError" class="error"></span><br>
-        <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호"><span id="telError" class="error"></span><br>
+        <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" value maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
+        <input type="text" id="nameInput" name="name" placeholder="이름" value maxlength="8"><span id="nameError" class="error"></span><br>
+        <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" value maxlength="10"><span id="birthError" class="error"></span><br>
+        <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><span id="telError" class="error"></span><br>
         <ul class="gender_list">
             <li><input type="radio" id="genderIdentity1" name="gender" value="M"><label for="genderIdentity1">남자</label></li>
             <li><input type="radio" id="genderIdentity2" name="gender" value="F"><label for="genderIdentity2">여자</label></li>
@@ -73,16 +73,11 @@
                 } else {
                     $("#idError").text("사용 가능한 아이디입니다.");
                     isIdChecked = true;
-                    console.log(response.isDuplicate);
                 }
             }
         });
     });
-    $("#idInput").change(function() {
-        isIdChecked = false;
-        $("#idError").text("");
-    });
-    
+
     // 닉네임 중복 확인 로직
     $("#checkNickname").click(function() {
         var nickname = $("#nicknameInput").val();
@@ -100,38 +95,24 @@
                 } else {
                     $("#nicknameError").text("사용 가능한 닉네임입니다.");
                     isNicknameChecked = true;
-                    console.log(response.isDuplicate);
                 }
             }
         });
     });
-    $("#nicknameInput").change(function() {
-        isNicknameChecked = false;
-        $("#nicknameError").text("");
-    });
-    
+
     // JS(jQuery)를 사용하여 form 데이터를 AJAX post 요청으로 회원가입 데이터 전송하는 로직
     $(document).ready(function() {
         $("#join_btn").click(function() {
-        	var isValid = true // 유효성 검사
-        	
             // 아이디,닉네임 중복 체크
             if (!isIdChecked) {
                 $("#idError").text("아이디 중복 확인을 해주세요.");
-                isValid = false;  
-            } else {
-                $("#idError").text("");
+                return;
             }
-        	
             if (!isNicknameChecked) {
                 $("#nicknameError").text("닉네임 중복 확인을 해주세요.");
-                isValid = false;
-            } else {
-                $("#passwordError").text("");
+                return;
             }
-            
             // 전화번호 세 자리로 구분하는 로직
-            var telPattern = /^[0-9]{3}-[0-9]{4}-[0-9]{4}$/;
             var telInput = $("#telInput").val();
             var telParts = telInput.split("-");
 
@@ -151,34 +132,28 @@
             // 필수 입력창이 비어있다면 오류 메시지를 표시
             if (!id) {
                 $("#idError").text("아이디를 입력해주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#idError").text("");
             }
 
             if (!pwd) {
                 $("#passwordError").text("비밀번호를 입력해주세요.");
-                isValid = false;
+                return;
             } else {
-                var passwordPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{10,}$/;
-                if (!passwordPattern.test(pwd)) {
-                    $("#passwordError").text("비밀번호는 최소 10자리 이며, 영문 대소문자, 숫자, 특수문자를 포함해야 합니다.");
-                    isValid = false;
-                } else {
-                    $("#passwordError").text("");
-                }
+                $("#passwordError").text("");
             }
 
             if (!pwd_confirm) {
                 $("#passwordConfirmError").text("비밀번호 확인을 입력해주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#passwordConfirmError").text("");
             }
 
             if (pwd !== pwd_confirm) { // 비밀번호 일치 확인
                 $("#passwordCheckError").text("비밀번호가 일치하지 않습니다.");
-                isValid = false;
+                return;
             } else {
                 $("#passwordCheckError").text("");
             }
@@ -188,7 +163,7 @@
 
                 if (!emailPattern.test(email)) {
                     $("#emailError").text("유효한 이메일 형식이 아닙니다.");
-                    isValid = false;
+                    return;
                 } else {
                     $("#emailError").text("");
                 }
@@ -196,52 +171,38 @@
 
             if (!nickname) {
                 $("#nicknameError").text("닉네임을 입력해주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#nicknameError").text("");
             }
 
             if (!name) {
                 $("#nameError").text("이름을 입력해주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#nameError").text("");
             }
 
             if (!birth) {
                 $("#birthError").text("생년월일을 입력해주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#birthError").text("");
             }
-			
+
             if (!telInput) {
-                $("#telError").text("전화번호를 입력해주세요.");
-                isValid = false;
-            } else if (!telPattern.test(telInput)) {
-                $("#telError").text("유효한 전화번호 형식이 아닙니다.");
-                isValid = false;
+                $("#telError").text("생년월일을 입력해주세요.");
+                return;
             } else {
                 $("#telError").text("");
             }
 
             if (!gender) { 
                 $("#genderError").text("성별을 선택해 주세요.");
-                isValid = false;
+                return;
             } else {
                 $("#genderError").text("");
             }
-            
-            if (!isValid) {  // 유효성 검사에 실패하면 함수를 빠져나옴
-                return;
-            }
-            
-            var date = new Date();
-            date.setHours(date.getHours() + 9); // 한국은 UTC로부터 +9시간이므로 9를 더해
-            var timestamp = date.toISOString();
-            var created_at = timestamp
-            
-			var is_admin = "User";
             
             var formData = {
                 id: id,
@@ -254,27 +215,18 @@
                 first_hp: telParts[1] ,
                 second_hp: telParts[2],
                 gender: gender,
-                created_at: created_at,
-                is_admin: is_admin,
             };
-			
-           // console.log(formData);
-            
-         	// AJAX 회원가입 post 요청 로직
-            $(this).prop("disabled", true);  // 회원가입 버튼 비활성화
+
+            // AJAX post 요청 로직
             $.ajax({
                 url: "/api/register",
                 type: "POST",
-                contentType: "application/json",
-                data: JSON.stringify(formData),
+                data: formData,
                 success: function(response) {
-                    window.location.href = "join-complete.do?name=" + encodeURIComponent(name);
+                    window.location.href = "join-complete.html";
                 },
                 error: function(xhr, status, error) {
                     alert("회원가입 중 오류가 발생했습니다.");
-                },
-                complete: function() {
-                  $("#join_btn").prop("disabled", false);  // 회원가입 버튼 활성화
                 }
             });
         });
