--- a/src/main/resources/templates/mypage/my-info-update.html
+++ b/src/main/resources/templates/mypage/my-info-update.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
 <!-- 페이지의 제목 설정 -->
-<head>
     <title>회원 정보 수정</title>
-</head>
 
 <!-- 해당 페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
@@ -16,7 +11,6 @@
 	</style>
 </th:block>
 
-<body>
 	<div class="content">
 		<h2>회원 정보 수정</h2>
 		<div class="content">
@@ -33,17 +27,18 @@
 					<li><input type="radio" id="genderIdentity1" name="gender" value="M" th:checked="${user.gender == 'M'}" disabled><label for="genderIdentity1">남자</label></li>
                     <li><input type="radio" id="genderIdentity2" name="gender" value="F" th:checked="${user.gender == 'F'}" disabled><label for="genderIdentity2">여자</label></li>
 				</ul>
-				<button type="button" id="update_btn" class="btn_submit">내 정보 수정하기</button>
+				<button type="button" id="update_btn" class="btn_submit">계정 정보 수정하기</button>
 			</form>
-            <hr>
-            <h3>회원 탈퇴</h3>
-            <button type="button" id="withdrawal_btn" class="btn_submit">회원 탈퇴하기</button>
 		</div>
 	</div>
-</body>
+	
+<script th:inline="javascript">
+	var userData = /*[[${user}]]*/ {};
+</script>
 <script>
     $(document).ready(function() {
-
+		
+    	// 사용할 변수 선언
         var originalNickname = $("#nicknameUpdateInput").val();
         var isNicknameChanged = false;
         var isNicknameChecked = false;
@@ -51,7 +46,8 @@
         var emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
         var telPattern = /^[0-9]{3}-[0-9]{4}-[0-9]{4}$/;
         var originalTel = $("#telUpdateInput").attr("th:value");
-        var userNum = [[${user.user_num}]];
+        var userNum = userData.user_num;
+        var userId = userData.id;
         
         // 닉네임 변경 확인
         $("#nicknameUpdateInput").change(function() {
@@ -157,6 +153,7 @@
 
             var formData = { // 전송할 formData
             	user_num: userNum,
+            	id: userId,
                 email: $("#emailUpdateInput").val(),
                 nickname: $("#nicknameUpdateInput").val(),
                 birth: $("#birthUpdateInput").val() + "T00:00:00",
@@ -193,11 +190,6 @@
             });
 
             
-        });
-
-        // 회원 탈퇴 페이지로 이동
-        $("#withdrawal_btn").click(function() {
-            window.location.href = "/mypage/my-info-delete.do";
         });
     });
 </script>
