--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -15,7 +15,8 @@
                     <li><a href="#!">일정 카테고리 관리</a></li>
                 </ul>
             </li>
-            <li><a href="/mypage/my-info-management.do">나의 정보 관리</a></li>
+            <li><a href="/mypage/my-info-management.do">계정 정보 관리</a></li>
+            <li><a href="/mypage/my-info-withdrawal.do">계정 탈퇴</a></li>
         </ul>
         <a href="">문의</a>
     </div>
