--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">애니플랜트</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- content script -->
+    <!-- content style -->
     <th:block layout:fragment="css"></th:block>
     <!-- content script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <th:block layout:fragment="script"></th:block>
 </head>
 <body>
